tests/bad/example-e13.rat
fn Main () -> Void {
  let a = Main();
  return;
}